2005-01-02 16:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm: New icon in info panel.
	* GNUmakefile: Copy images to resources.
	* Percentages.m: include math.h.  Changed drawing code.
	* icon.png: New image
	* TimeMonInfo.plist: New file.
	* TimeMonP.png: New image

2005-01-02 14:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* TimeMonWraps.h: Added file.
	
2005-01-01 15:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm: Improved look of text and
	replaced NSTextView.

2005-01-01 12:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* TimeMon_main.m: Corrected main to use NSApplicationMain().

2005-01-01 12:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* TimeMon_main.m: Changed sig of main and corrected loadNibNamed call.
	* TimeMonWraps.m: Empty functions.
