@@ -2,6 +2,13 @@
 
 #include <AppKit/PSOperators.h>
 
+// misc PS functions.
+void drawInit();
+
+void PSWait();
+
+void setColor(char *n, float r, float g, float b);
+
 // the drawing functions...
 void _doDrawArc1(double radius, double bdeg, double ddeg);
 
